Bug 949404 - Applications are half repainted once the keyboard is closed. r=Cwiiis, a=1.3+